# aass_icr

./: .gitignore  .gitmodules  EXAMPLE  rosdep.yaml
dummy_server/: CMakeLists.txt  mainpage.dox  manifest.xml
dummy_server/include/dummy_server/: dummy_server.h
dummy_server/model/: Sprayflask_5k.bag  Sprayflask_5k_tripod_icr.bag
dummy_server/rviz_config/: rviz_config.vcg
dummy_server/src/: dummy_server.cpp  dummy_server_node.cpp
grasp_affordances/: CMakeLists.txt  README  frames.gv  mainpage.dox  manifest.xml
grasp_affordances/include/grasp_affordances/: grasp_affordances.h
grasp_affordances/launch/: grasp_affordances.launch
grasp_affordances/src/: featurecloud.cpp  grasp_affordances.cpp  grasp_affordances_node.cpp
grasp_affordances/srv/: LoadIcr.srv
icr/: CMakeLists.txt  manifest.xml  setCokePlasticSmall_5k.sh  setCup.sh  setFirstArmPosture.sh  setFirstHandPosture.sh  setRedCup_5k.sh  setSecondArmPosture.sh  setSecondHandPosture.sh  setSecondObject.sh  setfirstHandPosture.sh  setfirstObject.sh
icr/config/: grasp_server_config.yaml  model_server_config.yaml  phalange_config.yaml  rviz.config.vcg
icr/icr_database/: test.bag
icr/include/: grasp_server.h  icr_server.h  model_server.h  phalange.h  pose_broadcaster.h
icr/input_grasps/: fingers_config.yaml  test.yaml
icr/launch/: grasp_server.launch  grasp_server_gazebo.launch  icr.launch  icr_affordances_gazebo.launch  icr_gazebo.launch  icr_gazebo_gdb.launch  icr_server.launch  icr_uc3m.launch  integrity_test.launch  model_server.launch  model_server_gazebo.launch
icr/models/: README  colors.txt  create_urdfs.py  daelist.txt  daelist_bkup.txt  stllist.txt
icr/models/dae/: cup.dae
icr/models/urdf/: README  TEMPLATE.urdf  cup.urdf
icr/msg/: ContactPoints.msg  ContactState.msg  StampedContactPoint.msg  StampedContactPoints.msg  StampedContactPose.msg
icr/src/: .#icr_client.cpp  .#model_server.cpp  grasp_server.cpp  grasp_server_node.cpp  icr.cpp  icr_client.cpp  icr_server.cpp  icr_server_node.cpp  icr_srv.cpp  model_server.cpp  model_server_node.cpp  phalange.cpp  pose_broadcaster.cpp
icr/srv/: SetObject.srv  compute_icr.srv  compute_icr5.srv  get_finger_parameters.srv  load_model.srv  load_object.srv
icr_msgs/: manifest.xml
icr_msgs/msg/: ContactPoint.msg  ContactPoints.msg  ContactPose.msg  ContactRegion.msg  ContactRegions.msg  Grasp.msg  StampedContactPoint.msg  StampedContactPoints.msg  StampedContactPose.msg  finger_tips.msg
icr_msgs/srv/: GetObjectPose.srv  SetComputationMode.srv  compute_icr.srv  load_model.srv  set_finger_parameters.srv
libicr/: install.sh  manifest.xml  rosdep.yaml
sensor_remapper/: CMakeLists.txt  manifest.xml
sensor_remapper/config/: sensor_remapper_config.yaml
sensor_remapper/include/sensor_remapper/: sensor_remapper.h
sensor_remapper/launch/: KCL_sensor_remapper.launch  sensor_remapper.launch
sensor_remapper/src/: sensor_remapper.cpp  sensor_remapper_node.cpp
